Update Angular catalog attachments UI
