# src/Nexus/API/v1/SystemController.cs
@@ -2,6 +2,7 @@
 // Copyright (c) [2024] [nexus-main]
 
 using Microsoft.AspNetCore.Authorization;
+using Microsoft.AspNetCore.Hosting;
 using Microsoft.AspNetCore.Mvc;
 using Microsoft.Extensions.Options;
 using Nexus.Core;
@@ -18,15 +19,23 @@ namespace Nexus.Controllers.V1;
 [Route("api/v{version:apiVersion}/[controller]")]
 internal class SystemController(
     IOptions<GeneralOptions> generalOptions,
-    IOptions<SecurityOptions> securityOptions
+    IOptions<SecurityOptions> securityOptions,
+    AppState appState,
+    IWebHostEnvironment environment
 ) : ControllerBase
 {
+    private const string DEVELOPMENT_HELP_LINK = "https://github.com/nexus-main/nexus";
+
     // [authenticated]
     // GET      /api/system
 
     private readonly GeneralOptions _generalOptions = generalOptions.Value;
 
     private readonly SecurityOptions _securityOptions = securityOptions.Value;
+
+    private readonly AppState _appState = appState;
+
+    private readonly IWebHostEnvironment _environment = environment;
 
     /// <summary>
     /// Gets the system configuration.
@@ -35,9 +44,9 @@ internal class SystemController(
     public SystemResponse Get()
     {
         return new SystemResponse(
-            _generalOptions.DefaultFileType,
-            _generalOptions.HelpLink,
-            _securityOptions.LogoutUrl
+            _appState.Version,
+            _generalOptions.HelpLink ?? (_environment.IsDevelopment() ? DEVELOPMENT_HELP_LINK : null),
+            _securityOptions.LogoutUrl ?? (_environment.IsDevelopment() ? "/" : null)
         );
     }
 }
